Added email systems and fixed gitignore