@@ -1,37 +1,29 @@
-# Simple Blogging Platform API
+# Blogging Platform API
 
-A robust RESTful API for a blogging platform built with **Spring Boot** and **Java**. This project demonstrates core backend development concepts including CRUD operations, relational database mapping, user authentication, and API documentation.
+A robust Spring Boot REST API featuring asynchronous notifications, secure authentication, and MySQL integration.
 
-## 🚀 Features
+##  Key Features
+* **Asynchronous Email Notifications**: Leverages `@EnableAsync` and `@Async` to send comment alerts in the background, ensuring near-instant API response times.
+* **User Authentication**: Secured with Spring Security using **Basic Auth** and **BCrypt** password encoding.
+* **Relational Persistence**: Uses **MySQL** for managing complex relationships between Users, Posts, and Comments.
 
-* **Post Management:** Create, Read, Update, and Delete blog posts.
-* **Comment System:** Users can add comments to specific posts (One-to-Many relationship).
-* **User Authentication:** Secure user registration with **BCrypt** password hashing via **Spring Security**.
-* **Role-Based Access Control (RBAC):** Differentiates between standard `ROLE_USER` and `ROLE_ADMIN`. (e.g., Only Admins can delete posts).
-* **Global Exception Handling:** Clean, meaningful JSON error responses using `@ControllerAdvice` (e.g., handling "Post Not Found" gracefully).
-* **Interactive API Documentation:** Integrated **Swagger UI** for easy endpoint testing and exploration.
+##  Prerequisites
+* **Java**: Version 23 (Requires `--enable-preview` flags).
+* **Database**: MySQL Server.
+* **Email**: A Gmail account with **2-Step Verification** enabled and an **App Password**.
 
-## 🛠️ Tech Stack
+##  Setup Instructions
+1. **Clone the project** to your local machine.
+2. **Database Setup**: Create a schema named `bloggingPlatform` in your MySQL Workbench.
+3. **Configure Secrets**:
+   - Copy `src/main/resources/application.properties.template` to `application.properties`.
+   - Update `spring.mail.username` and `spring.mail.password` (16-digit App Password).
+4. **Run the Application**: Ensure your IDE is configured to handle Java 23 preview features.
 
-* **Java 17+**
-* **Spring Boot** (Web, Data JPA, Security)
-* **MySQL** (Relational Database)
-* **Lombok** (Boilerplate code reduction)
-* **Springdoc OpenAPI / Swagger UI** (Documentation)
-* **Maven** (Dependency Management)
+## API Endpoints
+| Action | Method | Endpoint | Auth |
+| :--- | :--- | :--- | :--- |
+| **Register User** | `POST` | `/api/users/register` | None |
+| **Create Post** | `POST` | `/api/posts` | Basic Auth |
+| **Add Comment** | `POST` | `/api/comments/post/{postID}` | Basic Auth |
 
-## ⚙️ Setup & Installation
-
-1. Clone the repository:
-   `git clone https://github.com/upamdeb44/Simple-Blogging-Platform.git`
-2. Update the `src/main/resources/application.properties` file with your local MySQL credentials.
-3. Run the application via your IDE or using Maven:
-   `mvn spring-boot:run`
-4. Access the Swagger UI documentation at:
-   `http://localhost:8080/swagger-ui/index.html`
-
-## 🔒 Security Endpoints
-
-* `POST /api/users/register`: Public access for creating a new user account.
-* `POST /api/posts`: Requires Basic Auth.
-* `DELETE /api/posts/{id}`: Requires Basic Auth AND `ROLE_ADMIN` authority.
